src/assets/scss/_education.scss
.education-container {
  font-family: 'Open Sans Condensed', sans-serif;
  width: 100%;
  height: 550px;
  position: relative;
  color: white;
  background-color: #000000;
}

.education-timeline-text {
  display: flex;
  font-family: 'Jura', sans-serif;
  color: rgba(192,192,192,0.7s);
  position: absolute;
  left: 15px;
  top:15px;
  font-size: 100px;
  overflow: hidden;
  line-height: 90px;
}

.education-item {
  font-family: 'Open Sans Condensed', sans-serif;
  position: relative;
  width: 400px;
  height: 225px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  filter: grayscale(.8);
}

.education-item:hover{
  animation: bloom ease-in-out .75s forwards;
}

::-webkit-scrollbar {
  width: 1px;
  height: 1px;
}

::-webkit-scrollbar-button {
  width: 1px;
  height: 1px;
}

.horizontal-scroll-wrapper {
  display: block;
  height: calc(100vw + 50px);
  overflow-y: auto;
  overflow-x: hidden;
  transform: rotate(-90deg) translateX(-25px) translateY(-400px);
  transform-origin: right top;
  padding-top: 75px;
}

.horizontal-scroll-wrapper > div {
  display: block;
  height: 300px;
  width: 400px;
  color: black;
  margin-bottom: 250px;
  transform: rotate(90deg);
}

.education-scroll {
  font-family: 'Open Sans Condensed', sans-serif;
  position: absolute;
  bottom: 10px;
}

.progress {
  height: auto !important;
  background-color: rgba(192,192,192,0.2) !important;
  width: 100% !important;
}

.progress-bar {
  background-color: #FFFFFF !important;
  height: 2px!important;
}

.space-container  {
  height: 100% !important;
  width: 100vw!important;
  position: absolute!important;
  top: 0!important;
}

.education-title {
  font-size: 30px;
}

.education-subtitle {
  font-size: 20px;
}

@media only screen and (max-width: $SM) {
  .education-timeline-text {
    top: 10px;
    transform: none;
    font-size: 60px;
    line-height: 50px;
    width: 100%;
    margin: auto;
  }

  .horizontal-scroll-wrapper {
    transform: rotate(-90deg) translateX(-25px) translateY(-300px);
    padding-right: 25px;
    padding-top: 25px;
  }

  .education-item {
    width: 250px;
    height: 143px;
  }

  .education-title {
    font-size: 18px;
  }

  .education-subtitle  {
    font-size: 12px;
  }

  .horizontal-scroll-wrapper > div {
    width: 250px;
    height: 187px;
    margin-bottom: 100px;
  }

  .education-container {
    height: 400px;
  }
}

